# askfin

./: .gitignore
agent/: .pre-commit-config.yaml  main.py  pyproject.toml
web/: package.json  pnpm-lock.yaml  tailwind.config.ts
web/src/HOCs/: withChat.tsx
web/src/api/: os.ts  routes.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/onboarding/: page.tsx
web/src/app/research/: page.tsx
web/src/app/research/[asset]/: page.tsx
web/src/components/chat/ChatArea/: ChatArea.tsx  MessageArea.tsx
web/src/components/chat/ChatArea/ChatInput/: ChatInput.tsx
web/src/components/chat/ChatArea/Messages/: ChatBlankState.tsx  MessageItem.tsx
web/src/components/chat/Sidebar/: AuthToken.tsx  Sidebar.tsx
web/src/components/chat/Sidebar/Sessions/: SessionBlankState.tsx  Sessions.tsx
web/src/components/onboarding/: MultiStepForm.tsx  Step1About.tsx  Step2Investments.tsx  Step3LoanInsurance.tsx  types.ts
web/src/components/research/: index.tsx
web/src/components/research/asset/: Widget.tsx  index.tsx
web/src/components/research/components/: Dropdown.tsx  Headlines.tsx  MiniChart.tsx  MiniCharts.tsx  Search.tsx
web/src/components/research/widgets/: Chart.tsx  MiniChartSensex60.tsx  MiniChatBSEBank.tsx  MiniChatNifty.tsx  MiniChatSensex.tsx  StockMarketOverview.tsx
web/src/components/ui/: select.tsx
web/src/components/ui/icon/: constants.tsx  types.ts
web/src/hooks/: useAIStreamHandler.tsx  useWidgetContext.tsx
web/src/lib/: auth.ts  search.ts  utils.ts
web/src/types/: os.ts
